# tizen-repo

./: .clang-format  README.md  SystemdNotifier.cpp  SystemdNotifier.h  plan.md
_subproj_test/: meson.build
_subproj_test/src/: main.cpp
_subproj_test/subprojects/: ssl  vad  wakeword
aichat/: Plan.md  README.md  meson.build  meson_options.txt  requirement.md
aichat/example/: basic_usage.cpp
aichat/inc/: AiChatClient.h
aichat/src/: AiChatClient.cpp
android/audio/: settings.gradle.kts
android/audio/app/: build.gradle.kts
android/audio/app/src/androidTest/java/com/samsung/audioprocessor/: ExampleInstrumentedTest.kt
android/audio/app/src/main/: AndroidManifest.xml
android/audio/app/src/main/java/com/samsung/audioprocessor/: AudioProcessor.kt  MainActivity.kt
android/audio/app/src/main/java/com/samsung/audioprocessor/ui/theme/: Color.kt  Theme.kt  Type.kt
android/audio/app/src/main/res/values/: strings.xml  themes.xml
android/audio/app/src/test/java/com/samsung/audioprocessor/: ExampleUnitTest.kt
android/audio/gradle/wrapper/: gradle-wrapper.properties
audiostream/: audiostream.cpp  meson.build
edgeprocessor/: Plan.md  README.md  debug_test  debug_test2  meson.build  meson_options.txt  requirement.md
edgeprocessor/example/: audio_streaming_example.cpp
edgeprocessor/inc/: AudioStreaming.h  AudioStreamingConfig.h  IAudioStreamingListener.h  JsonFormatter.h  Message.h  RingBuffer.h
edgeprocessor/src/: AudioStreaming.cpp  JsonFormatter.cpp  RingBuffer.cpp
edgeprocessor/test/: test_audio_streaming.cpp  test_json_formatter.cpp  test_ring_buffer.cpp
facelandmark/: README.md  meson.build  requirement.md  serde.h
facelandmark/inc/: FaceLandmarkTracker.h
facelandmark/src/: FaceLandmarkTracker.cpp  main.cpp
opus/: Base64.h  Base64Helper.cpp  Base64Helper.h  OPUS_OGG_TEST_SUMMARY.md  OpusAudioCodec.cpp  OpusAudioCodec.h  README_OGG_TEST.md  compressed.opuswav  generateTestWav.cpp  meson.build  opusOggTest.cpp  opusTest.cpp  output.opus  requirement.md  run_opus_ogg_test.sh  verify_opus_output.sh
perf/: PerfMonitor.cpp  PerfMonitor.h  README.md  benchmark_perf_monitor.cpp  demo_perf_monitor.cpp  meson.build  quick_test.cpp  test_perf_monitor.cpp
python/: ray_flamegraph.py
rayhost/: AudioStreamer.cpp  meson.build  rayhost.cpp
rayhost/inc/: VoiceProfileManager.h
serde/: meson.build  serde.h  serdeTest.cpp
ssl/: meson.build
ssl/include/ssl/: ssl.hpp
ssl/src/: ssl.cpp
timer/: meson.build  timer.cpp  timer.h  timer_test.cpp
touch_upscaler/: README.md  TouchUpscaler.cpp  TouchUpscaler.h  meson.build  meson_options.txt  test.cpp
touchdv/: .gitignore  README.md  VirtualTouchDevice.cpp  VirtualTouchDevice.h  meson.build  newcode.cpp  test_gestures.sh  test_realworld_gestures.cpp  test_record_device.cpp  test_recording.json  touchdv.cpp
utils/: README.md  meson.build  variantMessageTest.cpp
utils/inc/: Base64.h  RingBuffer.h  Serde.h  SlidingWindow.h  Span.h  WaveHeader.h  ttsEngine.h
utils/src/: Base64.cpp  RingBuffer.cpp  WaveHeader.cpp  base64Test.cpp  ringBufferTest.cpp  serdeTest.cpp  slidingWindowTest.cpp  spanTest.cpp  ttsEngine.cpp  ttsEngineTest.cpp  waveHeaderTest.cpp
vad/: README.md  meson.build  requirement.md
vad/example/: callback_asr_integration.cpp  conversation_end_example.cpp  simple_asr_filter.cpp  simple_vad_example.cpp  streaming_asr_example.cpp  vad_asr_integration.cpp  vad_example.cpp
vad/inc/: VoiceActivityDetector.h
vad/src/: VoiceActivityDetector.cpp
wakeword/: meson.build
wakeword/inc/: WakeupWordDetector.h
wakeword/src/: WakeupWordDetector.cpp
